--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,35 @@
 server:
-  port: 8085
+  port: 8082
+
+logging:
+  level:
+    br.com.erpsystem: DEBUG
 
 spring:
   application:
-    name: ms-produto
+    name: ms-products
+  rabbitmq:
+    host: ${RABBITMQ_HOST:localhost}
+    username: ${RABBITMQ_USERNAME:guest}
+    password: ${RABBITMQ_PASSWORD:guest}
+    port: ${RABBITMQ_PORT:5672}
+    listener:
+      simple:
+        max-concurrency: 2
+    connection-timeout: 1000
+  jpa:
+    hibernate:
+      ddl-auto: create-drop
+    show-sql: true
+    open-in-view: false
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL8Dialect
 
+services:
+  ms-customer:
+    url: ${MS_CUSTOMER:http://localhost:8080/api/v1/customer}
+  ms-product:
+    url: ${MS_PRODUCT:http://localhost:8081/api/v1/products}
 
 
