--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,22 +1,30 @@
 server:
-  port: 8082
+  port: ${PRODUCTS_PORT:8082}
 
 logging:
   level:
     br.com.erpsystem: DEBUG
 
 spring:
+  flyway:
+    enabled: true
+    baseline-on-migrate: true
   application:
-    name: ms-products
-  rabbitmq:
-    host: ${RABBITMQ_HOST:localhost}
-    username: ${RABBITMQ_USERNAME:guest}
-    password: ${RABBITMQ_PASSWORD:guest}
-    port: ${RABBITMQ_PORT:5672}
-    listener:
-      simple:
-        max-concurrency: 2
-    connection-timeout: 1000
+      name: ms-products
+  #  rabbitmq:
+  #    host: ${RABBITMQ_HOST:localhost}
+  #    username: ${RABBITMQ_USERNAME:guest}
+  #    password: ${RABBITMQ_PASSWORD:guest}
+  #    port: ${RABBITMQ_PORT:5672}
+  #    listener:
+  #      simple:
+  #        max-concurrency: 2
+  #    connection-timeout: 1000
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: ${MYSQL_HOST:jdbc:mysql://localhost:3306/db_01_customer_ms}
+    username: ${MYSQL_USERNAME:customer-user}
+    password: ${MYSQL_PASSWORD:password}
   jpa:
     hibernate:
       ddl-auto: create-drop
@@ -24,7 +32,7 @@ spring:
     open-in-view: false
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.MySQL8Dialect
+        dialect: org.hibernate.dialect.MySQLDialect
 
 services:
   ms-customer:
